--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ __pycache__/*
 random_tools/graphs/__pycache__/*
 random_tools/graphs/__pycache__
 random_tools/graphs/CSV/*
+brokers/__pycache__
+brokers/interactive_brokers/__pycache__
