--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,19 @@ beautifulsoup4==4.8.0
 bs4==0.0.1
 certifi==2019.9.11
 chardet==3.0.4
+cycler==0.10.0
+eventkit==0.8.5
 gspread==3.1.0
 httplib2==0.14.0
 ib==0.8.0
+ib-insync==0.9.56
 IbPy2==0.8.0
 idna==2.8
+kiwisolver==1.1.0
 lxml==4.4.1
-numpy==1.17.2
+matplotlib==3.1.1
+nest-asyncio==1.2.0
+numpy==1.17.3
 oauth2client==4.1.3
 pandas==0.25.1
 peewee==3.11.2
@@ -16,6 +22,7 @@ psutil==5.6.3
 pyasn1==0.4.7
 pyasn1-modules==0.2.6
 PyMySQL==0.9.3
+pyparsing==2.4.2
 python-dateutil==2.8.0
 pytz==2019.2
 requests==2.22.0
@@ -23,4 +30,5 @@ rsa==4.0
 schedule==0.6.0
 six==1.12.0
 soupsieve==1.9.4
+SQLAlchemy==1.3.10
 urllib3==1.25.6
