--- a/core/web_gui/package.json
+++ b/core/web_gui/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.8",
+    "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "package.json": "^2.0.1",
     "react": "^16.12.0",
