--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-API/__pycache__/*
-API/__pycache__
-API/strategies/__pycache__
-API/strategies/__pycache__/*
-API/tmp/*
+modues/__pycache__/*
+modules/__pycache__
+modules/strategies/__pycache__
+modules/strategies/__pycache__/*
+tmp/*
