--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ certifi==2019.11.28
 chardet==3.0.4
 idna==2.8
 numpy==1.18.1
-peewee==3.13.1
+peewee
 pydantic==1.4
 requests==2.22.0
 starlette==0.12.9
