--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,8 +7,7 @@ LABEL maintainer="CyberHead <info@cyberhead.uk>" \
 ENV SERIES 5.0
 ENV LANG C.UTF-8
 
-EXPOSE 80
-ENTRYPOINT ["/home/CyberHead"]
+RUN mkdir /home/CyberHead
 
 RUN apt-get update \
  && apt-get install apt-utils -y --no-install-recommends \
@@ -22,3 +21,8 @@ RUN apt-get update \
 RUN git clone https://github.com/TheCyberHead/CyberHead \
     && cd CyberHead \
     && pip3 install -r requirements.txt
+
+EXPOSE 80
+#ENTRYPOINT ["/home/CyberHead"]
+
+
