--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,8 @@ services:
         restart: unless-stopped
     rabbitmq:
         image: rabbitmq
+        ports:
+          - "5672:5672"
         restart: unless-stopped
     cyberhead:
         build:
