--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,6 +22,7 @@ services:
             context: .
         image: cyberhead
         environment:
+            CH_PATH: '/home/CyberHead'
             CH_DB_NAME: db
             CH_DB_HOST: localhost
             CH_DB_USER: root
