Fix first merge conflict

--- a/cyberhead/web/package.json
+++ b/cyberhead/web/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ace-builds": "^1.4.8",
     "antd": "^3.26.8",
+    "apexcharts": "^3.18.0",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "package.json": "^2.0.1",
     "react": "^16.12.0",
+    "react-ace": "^8.0.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
