--- a/cyberhead/requirements.txt
+++ b/cyberhead/requirements.txt
@@ -1,15 +1,45 @@
+amqp==2.5.2
+Backtesting==0.1.7
+billiard==3.6.3.0
+bokeh==2.0.2
+celery==4.4.2
 certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
+click==7.1.2
+cryptography==2.9.2
+Flask==1.1.2
+Flask-Cors==3.0.8
 idna==2.8
+importlib-metadata==1.6.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+kombu==4.6.8
+lxml==4.5.0
+MarkupSafe==1.1.1
+multitasking==0.0.9
 numpy==1.18.1
-setuptools
-peewee
+packaging==20.3
+pandas==1.0.3
+pandas-datareader==0.8.1
+peewee==3.13.3
+Pillow==7.1.2
+pycparser==2.20
 pydantic==1.4
+PyMySQL==0.9.3
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+PyYAML==5.3.1
 requests==2.22.0
+six==1.14.0
+SQLAlchemy==1.3.17
 starlette==0.12.9
+tornado==6.0.4
+typing-extensions==3.7.4.2
 urllib3==1.25.8
-flask
-flask_cors
-pyopenssl
-sqlalchemy
-pymysql
+vine==1.3.0
+Werkzeug==1.0.1
+yfinance==0.1.54
+zipp==3.1.0
