--- a/cyberhead-compose.yml
+++ b/cyberhead-compose.yml
@@ -9,6 +9,6 @@ modules:
       git: 'github.com/thecyberhead/open-strategies'
       dir: './localtest'
   brokers:
-    src: 'github.com/thecyberhead/strategies'
+    git: 'github.com/thecyberhead/strategies'
     brokers:
       git: 'github.com/thecyberhead/deribit'
