--- a/cyberhead-compose.yml
+++ b/cyberhead-compose.yml
@@ -4,9 +4,7 @@ modules:
   strategies:
     git: 'github.com/TheCyberHead/strategies'  
     strat1:
-      dir: 'strat1'
-    strat2:
-      dir: 'strat2'
+      dir: 'smaCross'
   brokers:
     git: 'github.com/TheCyberHead/brokers'
     alpaca:
